added page that shows vertices and edges of entwork
